--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -1,12 +1,14 @@
 <div id="<%= dom_id brewery %>">
-  <p>
-    <strong>Name:</strong>
+
+  <h1>
     <%= brewery.name %>
+  </h1>
+
+  <p>
+    Beers count: <%= brewery.beers.count %>
   </p>
 
   <p>
-    <strong>Year:</strong>
-    <%= brewery.year %>
+    <em>Established in: <%= brewery.year %></em>
   </p>
-
 </div>
