--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,13 +1,21 @@
 <p style="color: green"><%= notice %></p>
-
 <h1>Breweries</h1>
+<h3>Number of breweries: <%= @breweries.count %></h3>
 
 <div id="breweries">
   <% @breweries.each do |brewery| %>
-    <%= render brewery %>
-    <p>
-      <%= link_to "Show this brewery", brewery %>
-    </p>
+    <div id="<%= dom_id brewery %>">
+      <p>
+        <strong>Name:</strong>
+        <%= link_to brewery.name, brewery %>
+      </p>
+
+      <p>
+        <strong>Year:</strong>
+        <%= brewery.year %>
+      </p>
+
+    </div>
   <% end %>
 </div>
 
