Week1_Ex10: Better navigation

--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -11,4 +11,11 @@
   <p>
     <em>Established in: <%= brewery.year %></em>
   </p>
+
+  <div>
+    <% brewery.beers.each do |beer| %>
+      <%= link_to beer.name, beer %>
+    <% end %>
+  </div>
+
 </div>
