--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -5,10 +5,11 @@
 <div id="beers">
   <% @beers.each do |beer| %>
     <%= render beer %>
-    <p>
-      <%= link_to "Show this beer", beer %>
-    </p>
   <% end %>
 </div>
 
 <%= link_to "New beer", new_beer_path %>
+
+<p>
+  <%= link_to "Back to breweries", breweries_path %>
+</p>
