--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Ratings</h1>
+<h1 class="text-3xl">Ratings</h1>
 
-<p>To be added</p>
+<ul>
+  <% @ratings.each do |rating| %>
+    <%= render rating %>
+  <% end %>
+</ul>
