Add upto w2_ex8

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <div class="menu menu-horizontal gap-4">
         <%= link_to 'breweries', breweries_path %>
         <%= link_to 'beers', beers_path %>
+        <%= link_to 'ratings', ratings_path %>
       </div>
     </div>
 
