Add upto w2_ex10

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -18,15 +18,15 @@
 
   <div>
     <%= form.label :style, style: "display: block" %>
-    <%= form.text_field :style %>
+    <%= form.select :style, options_for_select(@styles) %>
   </div>
 
   <div>
     <%= form.label :brewery_id, style: "display: block" %>
-    <%= form.number_field :brewery_id %>
+    <%= form.select :brewery_id, options_from_collection_for_select(Brewery.all, :id, :name) %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit "Create Beer", class: "btn" %>
   </div>
 <% end %>
