--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New beer</h1>
+<div class="flex flex-col gap-4 p-4">
+  <h1>New beer</h1>
 
-<%= render "form", beer: @beer %>
+  <%= render "form", beer: @beer %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to beers", beers_path %>
+  <div>
+    <%= link_to "Back to beers", beers_path %>
+  </div>
 </div>
