--- a/app/views/ratings/_rating.html.erb
+++ b/app/views/ratings/_rating.html.erb
@@ -1,4 +1,4 @@
 <li id="<%= dom_id rating %>", class="flex gap-1 mb-4">
   <%= "#{rating.beer.name}: #{rating.score}" %>
-  <%= button_to 'delete', rating, method: :delete, form: { data: { 'turbo-confirm': 'Are you sure?' } }, class:"link text-error"%>
+  <%= link_to "#{rating.user.username}", rating.user , class:"link text-error"%>
 </li>
