--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -1,6 +1,19 @@
 <h2>Create new rating</h2>
 
 <%= form_with model:@rating, class:"flex flex-col gap-4 items-center" do |f| %>
+
+  <% if @rating.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@rating.errors.count, "error") %> prohibited rating from being saved:</h2>
+
+      <ul>
+        <% @rating.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= f.label :beer_id, "beer" %>
   <%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s) %>
 
